<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">PancreArt</string>
    <string name="glucose">Glucose (mmol/L)</string>
    <string name="insulin">Insulin (%)</string>
    <string name="battery">Battery (%)</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="graph">Graph</string>
    <string name="pod">Pod</string>
    <string name="back_button">Back</string>

    <!-- Server IP (and port) address
         Address can be external/domain, but running locally requires that the emulator uses 10.0.2.2 to broadcast 127.0.0.1 (localhost computer).
    -->
    <string name="home_address">10.0.2.2:8000</string> <!-- Emulator localhost server -->
    <!--<string name="home_address">35.222.34.156</string>--> <!-- External cloud server -->

    <!-- Authentication -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Notifications -->
    <string name="notification_channel_name">Warnings</string>
    <string name="notification_channel_description">Statuses of blood and device components.</string>

    <string name="title_glucose_low">Glucose Low</string>
    <string name="title_glucose_high">Glucose High</string>
    <string name="title_glucose_normal">Glucose Normal</string>
    <string name="title_pod_battery_low">Pod Battery Low</string>
    <string name="title_sensor_failure">Sensor Failure</string>
    <string name="title_insulin_reservoir_low">Insulin Reservoir Low</string>
    <string name="title_delivery_failure">Delivery Failure</string>
    <string name="title_insulin_low">Insulin Low</string>

    <string name="context_text_glucose_low">Warning! Glucose levels are low.</string>
    <string name="context_text_glucose_high">Warning! Glucose levels are high.</string>
    <string name="context_text_glucose_normal">Awesome! Glucose levels have returned to normal.</string>
    <string name="context_text_pod_battery_low">Warning! Pod battery is low.</string>
    <string name="context_text_sensor_failure">Warning! Sensor has failed to read data.</string>
    <string name="context_text_insulin_reservoir_low">Warning! Insulin reservoir is low.</string>
    <string name="context_text_delivery_failure">Warning! Pod has failed to deliver insulin.</string>
    <string name="context_text_insulin_low">Warning! Insulin levels are below threshold.</string>

    <!-- Bluetooth -->
    <string name="bt_device_not_supported">Your device does not support BlueTooth.</string>
    <string name="bt_device_connected">Bluetooth device connected.</string>
    <string name="bt_device_connecting">Bluetooth device connecting …</string>
    <string name="bt_device_not_found">Bluetooth socket not found.</string>

    <!-- Graph -->
    <string name="graph_previous">Previous</string>
    <string name="graph_current">Current</string>
    <string name="graph_next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>

</resources>
