<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/dash_logo_image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/pancreas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="15dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash_logo_image"
        tools:context=".DashboardActivity"
        tools:layout_editor_absoluteX="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/glucose"
                android:textSize="32sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="1"
                    android:progress="1"
                    android:progressDrawable="@drawable/circle_progress_background" />

                <ProgressBar
                    android:id="@+id/glucose_circle_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="10"
                    android:progressDrawable="@drawable/circle_progress_foreground"
                    android:rotation="-90" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/glucose_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="32sp" />

                </RelativeLayout>

            </FrameLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/insulin"
                android:textSize="32sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="1"
                    android:progress="1"
                    android:progressDrawable="@drawable/circle_progress_background"
                    android:rotation="-90" />

                <ProgressBar
                    android:id="@+id/insulin_circle_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="100"
                    android:progressDrawable="@drawable/circle_progress_foreground"
                    android:rotation="-90" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/insulin_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="32sp" />

                </RelativeLayout>

            </FrameLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/battery"
                android:textSize="32sp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="100"
                    android:progressDrawable="@drawable/circle_progress_background"
                    android:rotation="-90" />

                <ProgressBar
                    android:id="@+id/battery_circle_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminate="false"
                    android:max="100"
                    android:progressDrawable="@drawable/circle_progress_foreground"
                    android:rotation="-90" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp">

                    <TextView
                        android:id="@+id/battery_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:textSize="32sp" />

                </RelativeLayout>

            </FrameLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
